# dywoqgame

./: .gitignore  dywoqgame.sln  go.mod  go.sum  go.work  main.go
DywoqGame/: Class1.cs  DywoqGame.csproj
DywoqGame/Logging/Debugger/: Debugger.cs  DebuggerStarter.cs  ITrackable.cs  ObjectInfo.cs
DywoqGame/Logging/Stream/: DebugStream.cs  ErrorStream.cs  (+8 more)
api/: README.md  go.mod  tsconfig.json
api/constraints/: comparable.go
api/dywoqapi/: conversions.lua  exception.lua  reflect.lua  stream.lua  unsafe.lua
api/globals/: panic.go  types.go
api/io/: base.go
api/lib/: conversions.lua  exception.lua  reflect.lua  unsafe.lua
api/src/: console.d.ts  error.d.ts  globals.d.ts  iterating.d.ts  lib.dywoqgame.1.0.0.d.ts  reflect.d.ts  type.conversion.d.ts
collision/: collision.go  go.mod
config/: metadata.go  window.go
engine/: go.mod  go.sum
engine/core/: game.go  window.go
engine/resource/: resource.go
entry/: contract.go  core.go  debug.go  init.go  metadata.go  resource.go  room.go  window.go
graphics/: position.go  size.go  sprite.go
interpreter/: go.mod  main.go
interpreter/parser/: ast.go  miniparser.go  parser.go
interpreter/scanner/: context.go  scanner.go  scanner_test.go  tokenizer.go
interpreter/token/: token.go
rendering/: CMakeLists.txt
resource/: management.go  resource.go
room/: go.mod  management.go  object.go  room.go
runtime/: runtime.go
stream/: go.mod  printer.go  stream.go  writer.go
tools/compiler/: go.mod
tools/dglc/: README.md  go.mod  main.go
tools/dywoqgamec/: README.md  go.mod  go.sum  main.go
(+40 files in other folders)
